# rokoko

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  pool_stats.txt  sage_sis_estimator.py
.cargo/: config.toml
ai_instructions/: HOW_TO_RUN.md
ajtai-merkle/: Cargo.toml
ajtai-merkle/src/: main.rs
bench_results/: PROFILING.md  diff_snapshots.py
bench_results/results_2026-04-24_12-19/: report.md
bench_results/results_2026-04-29_aes_after/: report.md
bench_results/results_2026-04-29_shake_after/: report.md
bench_results/results_2026-05-17_19-34/: report.md
bench_results/snapshots/: p26-baseline.json
benches/: bench.rs  eltwise_bench.rs  rdtsc_bench.rs  sumcheck_eval_order.rs
docs/: lessons-and-pitfalls.md  project-overview.md  snark.md
docs/cggi-proving-note/: main.tex
examples/: claims.rs
experiments/emerald_rapids/: rokoko_p_26  rokoko_p_28  rokoko_p_30  salsaa_2_26  salsaa_2_28  salsaa_2_30  test_greyhound_2_26  test_greyhound_2_28  test_greyhound_2_30
hexl-bindings/: hexl_wrapper.cpp  hexl_wrapper_alt.cpp
hexl-bindings/hexl-rust/src/: avx512_util.rs  cpu_features.rs  eltwise.rs  lib.rs  ntt.rs  number_theory.rs  util.rs
hexl-bindings/incomplete-rexl/: README.md
hexl-bindings/incomplete-rexl/examples/: demo.rs
hexl-bindings/incomplete-rexl/src/: cpu_features.rs
incomplete-rexl/: Cargo.toml  README.md
incomplete-rexl/src/: cpu_features.rs  eltwise.rs  lib.rs  ntt.rs  number_theory.rs  util.rs
incomplete-rexl/tests/: integration_tests.rs
rokoko-profiling/: Cargo.toml  build.rs
rokoko-profiling/src/: console.rs  lib.rs  log.rs  setup.rs  snapshot.rs
src/: hexl_benches.rs  lib.rs  main.rs
src/common/: arithmetic.rs  config.rs  decomposition.rs  estimator.rs  hash.rs  matrix.rs  mod.rs  norms.rs  parallel.rs  pool.rs  power_series.rs  projection_matrix.rs  ring_arithmetic.rs  sampling.rs  short_challenge.rs  structured_row.rs  sumcheck_element.rs  vertically_aligned_matrix.rs
src/hexl/: bindings.rs
src/profiling/: console.rs  mod.rs  setup.rs  snapshot.rs
src/protocol/: commit.rs  commitment.rs  config.rs  config_generator.rs  crs.rs  evaluation_point_sampler.rs  execution.rs  execution_simple.rs  fold.rs  mod.rs  open.rs  params.rs  prefix.rs  project.rs  project_2.rs  project_coarse.rs  project_fine.rs  proof.rs  snark.rs  sumcheck.rs  vdf.rs
src/protocol/intermediate_sumchecks/: builder.rs  builder_verifier.rs  context.rs  context_verifier.rs  loader.rs  loader_verifier.rs  mod.rs  runner.rs  runner_verifier.rs
src/protocol/parties/: commiter.rs  debug_hardness.rs  executor.rs  mod.rs  prover.rs  verifier.rs
src/protocol/snark/: lowering.rs  mod.rs
src/protocol/sumcheck/: combiner.rs  common.rs  diff.rs  hypercube_point.rs  inner_product.rs  linear.rs  mod.rs  polynomial.rs  product.rs  ring_to_field_combiner.rs  selector_eq.rs
src/protocol/sumcheck_utils/: combiner.rs  common.rs  diff.rs  elephant_cell.rs  factored_diff.rs  hypercube_point.rs  linear.rs  mod.rs  polynomial.rs  product.rs  profile.rs  ring_to_field_combiner.rs  selector_eq.rs  sum.rs
src/protocol/sumchecks/: builder.rs  builder_verifier.rs  context.rs  context_verifier.rs  helpers.rs  loader.rs  loader_verifier.rs  mod.rs  runner.rs  runner_verifier.rs
src/salsaa/: committer.rs  executor.rs  mod.rs
src/subroutines/: crs.rs
src/tfhe/: bootstrap.rs  embed.rs  glwe.rs  lwe.rs  mod.rs  poly.rs  prove.rs
src/tracing/: console.rs  mod.rs  setup.rs  snapshot.rs
