[package]
name = "rokoko"
version = "0.1.0"
edition = "2021"

[features]
default = ["unsafe-sumcheck", "incomplete-rexl"]

incomplete-rexl = ["dep:incomplete-rexl"]
unsafe-sumcheck = []
debug-hardness = []
debug-decomp = []
debug-fs = []
profile-sumcheck = []
p-30 = []
p-26 = []
p-28 = []
events = ["dep:tracing-subscriber"]
profile = [
    "dep:tracing-subscriber",
    "dep:tracing-chrome",
    "dep:chrono",
    "dep:sysinfo",
    "dep:serde",
    "dep:serde_json",
]
snark = []

[dependencies]
criterion = "0.7.0"
num = "0.4.3"
rand = "0.9.2"
blake3 = "1.5.1"
aes = "0.8"
ctr = "0.9"
incomplete-rexl = { path = "incomplete-rexl", optional = true }
libloading = "0.8.6"
libm = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
tracing-chrome = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }
sysinfo = { version = "0.32", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
mimalloc = "0.1"

[profile.release]
opt-level = 3
debug = false
lto = "fat"           # Full link-time optimization
codegen-units = 1     # Better optimization at cost of compile time
panic = "abort"       # Smaller binaries, slightly faster

[profile.dev]
opt-level = 3

[profile.bench]
opt-level = 3
debug = false
overflow-checks = false
lto = "fat"
codegen-units = 1

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "eltwise_bench"
harness = false
required-features = ["incomplete-rexl"]
