[package]
name = "rokoko-profiling"
version = "0.1.0"
edition = "2021"
description = "Tracing-based profiling infrastructure for rokoko"
publish = false

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-chrome = "0.7"
chrono = { version = "0.4" }
sysinfo = { version = "0.32" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
